--- a/sn-article.tex
+++ b/sn-article.tex
@@ -299,7 +299,7 @@ In these domains blinding may not be possible in studies because the interventio
 
 Follow the Flowcharts~\ref{fig:2_1} and ~\ref{fig:2_1_1} for annotation instructions of the signalling question, ``Were participants aware of their assigned intervention during the trial?''.
 Following the above explanation, the first diamond in the flowchart asks the annotators to find text descriptions stating that the participants could not distinguish (unaware/blinded) between the assigned interventions: the main intervention and the control intervention.
-If such description is found, then annotate it and follow the connector line towards the decision ``Yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – the first part where intervention administration is described, and the second part where proper participant blinding via a placebo is described.
+If such description is found, then annotate it and follow the connector line towards the decision ``yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – the first part where intervention administration is described, and the second part where proper participant blinding via a placebo is described.
 Annotate these parts with the label ``2.1 No Good''.
 Both these administration descriptions can be found either in adjacent sentences or far apart in the same or different paragraphs within the same section.
 Annotators are likely to find this information in the Methods section and not in the Results section. 
@@ -347,7 +347,7 @@ If carers and treatment administrators are not blinded, their awareness of the a
 Follow the Flowcharts~\ref{fig:2_2} for annotation instructions of the signalling question, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?''.
 Following the above explanation, the first diamond instructs the annotators to find any sentences stating or clearly implying if the carers and administrators could not distinguish between intervention and placebo.
 If no such sentences were found, the label ``2.2 No Information'' will be assumed for this question.
-If such sentences are found, then annotate them and follow the connector line towards the decision ``Yes'', then find the sentences that describe intervention and placebo administration and annotate both the descriptions – the first part where intervention administration is described, and the second part where proper participant blinding via a placebo is described.
+If such sentences are found, then annotate them and follow the connector line towards the decision ``yes'', then find the sentences that describe intervention and placebo administration and annotate both the descriptions – the first part where intervention administration is described, and the second part where proper participant blinding via a placebo is described.
 Annotate all these parts with the label ``2.1 No Good''.
 For example, ``This RCT used a 5-week, double-blind, parallel groups design'', ``Treatment was administered by an RA who was blinded to assessment results and study hypotheses''\cite{chiaravalloti2020efficacy}.
 If no proper carer blinding was described or if it was explicitly mentioned that carer blinding was not possible, then the sentences identified using the first diamond should be marked with the label ``2.2 Yes Bad''.
@@ -387,7 +387,7 @@ It clarifies that these deviations are not related to the dropout rate in the tr
 If no percentage or absolute number of deviations is identified in the text, no annotation is necessary, and the document will be automatically marked as ``2.3 No Information'' for this signalling question, following the  ``No'' arrow.
 If the percentage of deviations is identified, annotators should annotate the full sentence where this information is found.
 %For example, during the course of a trial, a certain number of patients could deviate from their assigned intervention or failed to adhere to the prescribed treatment due to various reasons such as lack of improvement, side effects, or personal preference.
-They should then proceed to the next diamond in the flowchart, following the ``Yes'' flow, and assess whether these deviations occurred due to the trial context.
+They should then proceed to the next diamond in the flowchart, following the ``yes'' flow, and assess whether these deviations occurred due to the trial context.
 If the deviations are determined to be due to the trial context, the annotated sentence(s) should be marked as ``2.3 Yes Bad''.
 If the deviations are not attributed to the trial context, they should be marked as ``2.3 No Good''.
 For example, ``Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after...''~\cite{osteraas2019implementing}. % Anjani: requires fact-checking if this is 2.3 Yes Bad or No Good
@@ -403,21 +403,7 @@ Ultimately, the review of deviations and trial context is subjective, but the an
 %
 %
 \subsection*{Signalling question - 2.4 }
-%
-In RCTs, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
-These deviations are known as ``protocol deviations'' or ``protocol violations''.
-The question ``Were these deviations likely to have affected the outcome?'' in the revised Cochrane RoB 2.0 tool refers to whether the protocol deviations had the potential to influence the study outcomes.
-If the identified deviations (identified using the previous questions) are determined to have a substantial likelihood of affecting the study outcomes, it suggests a higher risk of bias. 
-Conversely, if the deviations are deemed unlikely to have influenced the outcomes significantly, it indicates a lower risk of bias.
-Assessing the impact of deviations on the outcomes requires a thorough understanding of the study design, interventions, and potential sources of bias.
-It may involve considering factors such as the timing, frequency, and magnitude of the deviations, as well as their relevance to the study objectives and population under investigation.
-%Ultimately, the judgment regarding the influence of deviations on the outcomes is subjective and requires careful interpretation of the available information and expertise in the specific research domain.
-%The aim of this question is to assess the RoB due to the protocol deviations, which may have introduced systematic error or affected the internal validity of the study.
-%If the deviations were unlikely to have affected the study outcome, then this question would be answered with "No."
-%However, if the deviations were likely to have affected the study outcome, then this question would be answered with "Yes," indicating that the study is at high risk of bias.
-%If it is unclear whether the deviations affected the outcome, the answer would be "Some concerns."
-
-
+\label{subsec:2_4}
 %
 %
 %
@@ -430,12 +416,30 @@ It may involve considering factors such as the timing, frequency, and magnitude 
 %
 %
 %
+In RCTs, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended, the trial site not adhering to the study procedures, external constraints or trial discontinuation.
+These deviations are known as ``protocol deviations''~\cite{folayan2019challenges,merli2020immediate}.
+The question ``Were these deviations likely to have affected the outcome?'' refers to whether the protocol deviations had the potential to influence the study outcomes.
+If the identified deviations (identified using the previous questions) are determined to have a substantial likelihood of affecting the study outcomes, it suggests a higher risk of bias~\cite{dodd2012nonadherence}. 
+Conversely, if the deviations are deemed unlikely to have influenced the outcomes significantly, it indicates a lower risk of bias.
+Assessing the impact of deviations on the outcomes requires a thorough understanding of the study design, interventions, and potential sources of bias.
+It may involve considering factors such as the timing, frequency, and magnitude of the deviations, as well as their relevance to the study objectives and population under investigation.
+%Ultimately, the judgment regarding the influence of deviations on the outcomes is subjective and requires careful interpretation of the available information and expertise in the specific research domain.
+%The aim of this question is to assess the RoB due to the protocol deviations, which may have introduced systematic error or affected the internal validity of the study.
+%If the deviations were unlikely to have affected the study outcome, then this question would be answered with "No."
+%However, if the deviations were likely to have affected the study outcome, then this question would be answered with "Yes," indicating that the study is at high risk of bias.
+%If it is unclear whether the deviations affected the outcome, the answer would be "Some concerns."
+
+
+
 For annotation instructions for this signalling question, ``Were these deviations likely to have affected the outcome?'' follow the Flowchart~\ref{fig:2_4}.
-Before proceeding with the annotation, ensure that the previous question was not marked as ``2.3 No Good''.
+Before proceeding with the annotation, ensure that the previous question was not marked as ``2.3 No Good'' (in this case either no deviations were identified or they were not significant).
 If it was, no annotation is required for this question.
 Otherwise, follow the instructions below.
 The first diamond prompts the annotators to identify the reasons for deviations and, if found, they mark it, then follow the connector path of ``yes'' and judge whether these deviations could affect the outcome.
-If the annotated reasons are likely to cause some deviation, then mark them as ``2.4 Yes Bad'' and ``2.4 No Good'' otherwise.
+If the annotated reasons could cause some deviation, then mark them as ``2.4 Yes Bad'' and ``2.4 No Good'' otherwise.
+%For example, ``Due to logistical constraints, three participants in the intervention group did not receive the prescribed medication as per the study protocol.'' could cause high risk of bias.
+%Anjani: (TODO) Could this really cause high risk of bias or is it low risk since only three participants are affected? %Anjani: Give examples for low risk of bias deviations and high risk of bias deviations.
+Annotate full sentences for this question.
 The reasons could be found either in the Results section (main priority) or the Methods section (second priority).
 If the reasons for deviations are not found, then the question is assumed to have ``No Information''.
 %To annotate the information pertaining to the previous question, the annotators identify the percentage of deviation (a number) and annotate them, while for this question, the annotators are prompted to look for the reasons for these deviations and annotate them.
@@ -445,13 +449,6 @@ If the reasons for deviations are not found, then the question is assumed to hav
 %
 %
 \subsection*{Signalling question - 2.5 }
-%
-This signalling question 2.5, ``Were these deviations from the intended intervention balanced between groups?'' aims to assess whether any deviations from the intended intervention were similar in frequency and severity across the different study groups (i.e., intervention group and control group) or whether one group had a greater number or severity of deviations than the other.
-Balanced deviations between groups are important for maintaining the internal validity of the study.
-If one group had a higher number or severity of deviations from the intended intervention than the other, it could potentially introduce bias and confound the results of the study.
-Therefore, it is important to assess whether deviations from the intended intervention were balanced between the groups when evaluating the risk of bias in an RCT.
-
-
 %
 %
 %
@@ -464,21 +461,29 @@ Therefore, it is important to assess whether deviations from the intended interv
 %
 %
 %
+This signalling question 2.5, ``Were these deviations from the intended intervention balanced between groups?'' aims to assess whether any deviations from the intended intervention were similar in frequency and severity across the different study groups (i.e., intervention group and control group) or whether one group had a greater number or severity of deviations than the other.
+Balanced deviations between groups are important for maintaining the internal validity of the study.
+If one group had a higher number or severity of deviations from the intended intervention than the other, it could potentially introduce bias and confound the results of the study.
+Therefore, it is important to assess whether deviations from the intended intervention were balanced between the groups when evaluating the risk of bias in an RCT~\cite{rozenfeld2006effect}.
+
 
 
 For annotation instructions for this signalling question, ``Were these deviations from the intended intervention balanced between groups?'' follow the Flowchart~\ref{fig:2_5}.
 The first diamond in the flowchart instructs annotators to search for quantities or numbers indicating deviations from the intended intervention.
-It is important to distinguish between deviations and dropout rates (refer to subsection~\ref{subsec:2_3} for clarification).
+It is important to distinguish between deviations and dropout rates (refer to the note in subsection~\ref{sec:dom2} for clarification).
 Focus on identifying any numerical information that demonstrates deviations from the intended intervention.
 If the deviations are balanced between the groups, mark them as ``2.5 Yes Good''.
 If they are not balanced, mark them as ``2.5 No Bad''.
 In cases where no quantification of deviations is found, but the Discussion section mentions that the deviations were not balanced, mark that text in the discussion as ``2.5 No Bad''.
+For example, ``In the standard care group, the use of corticosteroids in 14 patients (9.4\%) was considered a protocol deviation, and the...'' should be marked as ``2.5 No Bad''~\cite{tomazini2020effect}.
+In contrast, ``There were only few missing data because of premature withdrawal, and they were balanced in numbers across the 2 groups with similar reasons for missing data.'' should be marked as ``2.5 Yes Good''~\cite{prodeus2016fermented}.
 If no text is marked, the document will receive a ``No Information'' label for this signalling question.
 Ensure that the annotation reflects the presence or absence of balanced deviations and consider both quantitative information and relevant discussion text to make an accurate annotation.
 %
 %
 %
 \subsection*{Signalling question - 2.6 }
+\label{subsec:2_6}
 %
 The signalling question ``Was an appropriate analysis used to estimate the effect of assignment to intervention?'' aims to assess the adequacy of the analysis conducted to estimate the effect of assigning participants to different interventions in a study.
 The assignment of participants to interventions is a critical aspect that helps determine the causal relationship between the intervention and the outcomes.
