--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -578,3 +578,68 @@
   year={2019},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{folayan2019challenges,
+  title={Challenges with study procedure fidelity when conducting household survey: reports from the field},
+  author={Folayan, Morenike Oluwatoyin and Alade, Micheal O and Oziegbe, Elizabeth O},
+  journal={BMC Research Notes},
+  volume={12},
+  pages={1--5},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{merli2020immediate,
+  title={Immediate versus early non-occlusal loading of dental implants placed flapless in partially edentulous patients: A 10-year randomized clinical trial},
+  author={Merli, Mauro and Merli, Marco and Mariotti, Giorgia and Pagliaro, Umberto and Moscatelli, Marco and Nieri, Michele},
+  journal={Journal of Clinical Periodontology},
+  volume={47},
+  number={5},
+  pages={621--629},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+
+@article{dodd2012nonadherence,
+  title={Nonadherence to treatment protocol in published randomised controlled trials: a review},
+  author={Dodd, Susanna and White, Ian R and Williamson, Paula},
+  journal={Trials},
+  volume={13},
+  pages={1--16},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{rozenfeld2006effect,
+  title={Effect of patient withdrawal on a study evaluating pharmacist management of hypertension},
+  author={Rozenfeld, Yelena and Hunt, Jacquelyn S},
+  journal={Pharmacotherapy: The Journal of Human Pharmacology and Drug Therapy},
+  volume={26},
+  number={11},
+  pages={1565--1571},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{tomazini2020effect,
+  title={Effect of dexamethasone on days alive and ventilator-free in patients with moderate or severe acute respiratory distress syndrome and COVID-19: the CoDEX randomized clinical trial},
+  author={Tomazini, Bruno M and Maia, Israel S and Cavalcanti, Alexandre B and Berwanger, Otavio and Rosa, Regis G and Veiga, Viviane C and Avezum, Alvaro and Lopes, Renato D and Bueno, Flavia R and Silva, Maria Vitoria AO and others},
+  journal={Jama},
+  volume={324},
+  number={13},
+  pages={1307--1316},
+  year={2020},
+  publisher={American Medical Association}
+}
+
+@article{prodeus2016fermented,
+  title={Fermented milk consumption and common infections in children attending day-care centers: a randomized trial},
+  author={Prodeus, Andrey and Niborski, Violeta and Schrezenmeir, Juergen and Gorelov, Alexander and Shcherbina, Anna and Rumyantsev, Alexander},
+  journal={Journal of pediatric gastroenterology and nutrition},
+  volume={63},
+  number={5},
+  pages={534},
+  year={2016},
+  publisher={Wolters Kluwer Health}
+}
