Signalling question 2.6 instructions done

--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -643,3 +643,14 @@
   year={2016},
   publisher={Wolters Kluwer Health}
 }
+
+@article{gupta2011intention,
+  title={Intention-to-treat concept: a review},
+  author={Gupta, Sandeep K},
+  journal={Perspectives in clinical research},
+  volume={2},
+  number={3},
+  pages={109},
+  year={2011},
+  publisher={Wolters Kluwer--Medknow Publications}
+}
