--- a/sn-article.tex
+++ b/sn-article.tex
@@ -485,14 +485,16 @@ Ensure that the annotation reflects the presence or absence of balanced deviatio
 \subsection*{Signalling question - 2.6 }
 \label{subsec:2_6}
 %
-The signalling question ``Was an appropriate analysis used to estimate the effect of assignment to intervention?'' aims to assess the adequacy of the analysis conducted to estimate the effect of assigning participants to different interventions in a study.
-The assignment of participants to interventions is a critical aspect that helps determine the causal relationship between the intervention and the outcomes.
+The signalling question ``Was an appropriate analysis used to estimate the effect of assignment to intervention?'' evaluates whether the analysis performed to estimate the effect of assigning participants to interventions in the study was reliable and valid.
+Participants' assignment to intervention is key to unbiasedly determining the causal relationship between the intervention and outcome.
 To ensure the validity and reliability of the study results, it is essential to use appropriate statistical methods and analytical techniques when estimating the effect of assignment to interventions.
-This signalling question focuses on evaluating whether the analysis performed in the study was appropriate and reliable in estimating the intervention's effect.
-The aim is to assess the risk of bias associated with the analysis methodology employed.
-An appropriate analysis involves using valid statistical tests, appropriate control for confounding variables, and proper consideration of potential sources of bias or confounding. 
-The goal is to minimize the risk of drawing incorrect conclusions or overestimating the effect of the intervention.
-By assessing the adequacy of the analysis, this signalling question helps evaluate the internal validity of the study and the confidence in the reported effect of the intervention.
+So this question assesses the risk of bias associated with the analysis methodology applied. 
+An appropriate analysis involves using valid statistical tests, appropriate control for confounding variables, and properly considering potential sources of bias or confounding~\cite{gupta2011intention}. 
+%This signalling question evaluates whether the analysis performed in the study was appropriate and reliable in estimating the intervention's effect.
+%The aim is to assess the risk of bias associated with the analysis methodology.
+%An appropriate analysis involves using valid statistical tests, appropriate control for confounding variables, and proper consideration of potential sources of bias or confounding. 
+%The goal is to minimize the risk of drawing incorrect conclusions or overestimating the effect of the intervention.
+%By assessing the adequacy of the analysis, this signalling question helps evaluate the internal validity of the study and the confidence in the reported effect of the intervention.
 
 
 %
@@ -516,7 +518,7 @@ ITT analysis is a method used to assess the effectiveness of an intervention by 
 If the annotators find information indicating the use of ITT analysis, they should mark and label the corresponding sentences as ``2.6 Yes Good''.
 Alternatively, if the study did not use ITT analysis and employed methods like naive ``per-protocol'' analysis or ``as treated" analysis to handle deviations from intended interventions, annotators should mark and label the relevant text as ``2.6 No Bad''.
 To locate this information, annotators should prioritize checking the Methods section, followed by the Results or Discussion section.
-If no information regarding ITT analysis, naive ``per-protocol'' analysis, or ``as treated'' analysis is found, it is assumed that no information is available to answer this question in the paper, and it should be labelled as ``No Information''.
+If no information regarding ITT analysis, naive ``per-protocol'' analysis, or ``as treated'' analysis is found, it is assumed that no information is available to answer this question in the paper, and it should be labelled as ``No Information''~\cite{gupta2011intention}.
 %
 %
 %
