--- a/sn-article.tex
+++ b/sn-article.tex
@@ -527,12 +527,12 @@ If no information regarding ITT analysis, naive ``per-protocol'' analysis, or ``
 The question ``Was there potential for a substantial impact (on the result) of the failure to analyze participants in the group to which they were randomized?'' refers to the risk of bias associated with deviations from the intended analysis plan in an RCT.
 In an RCT, participants are usually randomized to receive either the intervention being tested or a control intervention.
 The analysis plan is typically based on the assumption that all participants will be analyzed according to the group to which they were randomized.
-However, there may be instances where participants are not analyzed in the group to which they were randomized, for example, if they dropped out of the study or if they switched groups.
-This is known as a deviation from the intended analysis plan.
+However, there may be instances where participants are not analyzed in the group to which they were randomized, for example, if they dropped out of the study or if they switched groups~\cite{lewis2020dropout,kaufmann1995chapter}. %Kaufmann 1995 has several participants crossover between groups and rates of dropout
+This is known as a deviation from the intended analysis plan (not to be confused with deviation from the intended intervention).
 The question is asking whether this deviation from the intended analysis plan could have had a substantial impact on the study results.
 If there is a potential for a substantial impact, then there is a high risk of bias.
 For example, if a large proportion of participants in the intervention group dropped out of the study, but all participants in the control group were analyzed, this could lead to an overestimation of the treatment effect.
-Similarly, if participants switched groups, this could lead to an underestimation or overestimation of the treatment effect.
+Similarly, if participants switched groups, this could lead to an underestimation or overestimation of the treatment effect~\cite{gupta2011intention}.
 %Therefore, this question is important for assessing the risk of bias associated with deviations from the intended analysis plan in an RCT, and it helps to ensure that the study results are reliable and valid.
 
 
@@ -562,7 +562,6 @@ Therefore, for the sake of simplicity and good agreement, the annotators are req
 If the information is not found in the results section, mark the text in the table.
 If the information is to be found nowhere except in a flowchart, mark the caption of the flowchart.
 However, ensure that the flowchart annotation is your last resort.
-
 %If you find it in the flowchart, mark the caption and also ``included n=XX for ITT''. % Unfortunately, you cannot mark the flowchart because the new tool does not allow image annotation
 %Sometimes, there could be disagreements here. Let's take, for example, Solomons\_2020\_VISA\_A\_12months\_IAA\_Hilfiker\_Sattelmayer\_with\_Protocol.pdf where Martin marks "We did not impute or replace any missing values but rather fitted all the available data to the model" as No good. 
 %However, what does the phrase "all the available data" mean? Maybe only 70\% of the outcomes data was available.
