--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -654,3 +654,25 @@
   year={2011},
   publisher={Wolters Kluwer--Medknow Publications}
 }
+
+@article{lewis2020dropout,
+  title={Dropout from psychological therapies for post-traumatic stress disorder (PTSD) in adults: Systematic review and meta-analysis},
+  author={Lewis, Catrin and Roberts, Neil P and Gibson, Samuel and Bisson, Jonathan I},
+  journal={European Journal of Psychotraumatology},
+  volume={11},
+  number={1},
+  pages={1709709},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{kaufmann1995chapter,
+  title={Chapter 14: Self-help group participation among people with severe mental illness},
+  author={Kaufmann, Caroline L and Schulberg, Herbert C and Schooler, Nina R},
+  journal={Prevention in Human Services},
+  volume={11},
+  number={2},
+  pages={315--331},
+  year={1995},
+  publisher={Taylor \& Francis}
+}
