--- a/sn-article.tex
+++ b/sn-article.tex
@@ -523,6 +523,7 @@ If no information regarding ITT analysis, naive ``per-protocol'' analysis, or ``
 %
 %
 \subsection*{Signalling question - 2.7 }
+\label{subsec:2_7}
 %
 The question ``Was there potential for a substantial impact (on the result) of the failure to analyze participants in the group to which they were randomized?'' refers to the risk of bias associated with deviations from the intended analysis plan in an RCT.
 In an RCT, participants are usually randomized to receive either the intervention being tested or a control intervention.
@@ -578,12 +579,14 @@ This domain aims to evaluate whether there is a potential bias in how missing da
 %
 %
 \subsection*{Signalling question - 3.1 }
+\label{subsec:3_1}
 %
-The question ``Were data for this outcome available for all, or nearly all Participants randomized?'' assesses the completeness of outcome data in a study.
+The question ``Were data for this outcome available for all, or nearly all participants randomized?'' assesses the completeness of outcome data in a study.
 It aims to determine if data for the specific outcome of interest were collected and available for analysis for a high proportion of the participants who were initially randomized into the study.
 By evaluating this question, you can assess the risk of bias associated with missing or incomplete outcome data.
 If the data for the outcome of interest were not available for a substantial number of participants or if there was a high degree of missing data, it raises concerns about the potential impact on the validity and reliability of the study's findings.
-Adequate availability of outcome data for the majority of randomized participants enhances confidence in the study's results and reduces the risk of bias in this domain.
+Missing data can lead to reduced statistical power and imprecise estimates of treatment effects
+Adequate availability of outcome data for the majority of randomized participants enhances confidence in the study's results and reduces the risk of bias in this domain~\cite{gnang2020empirical,shara2015randomly}.
 
 
 %
@@ -605,6 +608,9 @@ Following the above explanation, the first diamond instructs the annotators to c
 If the annotators find that the outcomes data were available for all or nearly all (at least 95\% of the total) participants, mark the text descriptions mentioning it and label it with ``3.1 Yes Good''.
 If the outcomes data were available for less than 95\% of participants randomized, then mark this information and label it with ``3.1 No Bad''.
 If no information regarding the availability of outcome data at the specified time point is found, consider the question as having ``No Information''.
+This information is likely found in the Results section of the RCT under consideration, but if not found there, then mark the information in results table. 
+If the information is to be found nowhere except in a flowchart, mark the caption of the flowchart.
+However, ensure that the flowchart annotation is your last resort.
 %
 %
 %
