--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -676,3 +676,24 @@
   year={1995},
   publisher={Taylor \& Francis}
 }
+
+@article{gnang2020empirical,
+  title={An Empirical Comparison of Statistical Methods for Missing Data in Randomized, Double-Blind, Placebo-Controlled, Phase 3 Clinical Trials for Chronic Pain and Lipid-Lowering Products},
+  author={Gnang, Jeanine and Kim, Yoonhee and Ren, Yi and Travis, James and Kim, Yongman},
+  journal={Therapeutic Innovation \& Regulatory Science},
+  volume={54},
+  pages={1416--1427},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{shara2015randomly,
+  title={Randomly and non-randomly missing renal function data in the strong heart study: a comparison of imputation methods},
+  author={Shara, Nawar and Yassin, Sayf A and Valaitis, Eduardas and Wang, Hong and Howard, Barbara V and Wang, Wenyu and Lee, Elisa T and Umans, Jason G},
+  journal={PloS one},
+  volume={10},
+  number={9},
+  pages={e0138923},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
