--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -697,3 +697,45 @@
   year={2015},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{akl2012potential,
+  title={Potential impact on estimated treatment effects of information lost to follow-up in randomised controlled trials (LOST-IT): systematic review},
+  author={Akl, Elie A and Briel, Matthias and You, John J and Sun, Xin and Johnston, Bradley C and Busse, Jason W and Mulla, Sohail and Lamontagne, Francois and Bassler, Dirk and Vera, Claudio and others},
+  journal={Bmj},
+  volume={344},
+  year={2012},
+  publisher={British Medical Journal Publishing Group}
+}
+
+@article{bell2014handling,
+  title={Handling missing data in RCTs; a review of the top medical journals},
+  author={Bell, Melanie L and Fiero, Mallorie and Horton, Nicholas J and Hsu, Chiu-Hsieh},
+  journal={BMC medical research methodology},
+  volume={14},
+  number={1},
+  pages={1--8},
+  year={2014},
+  publisher={BioMed Central}
+}
+
+@article{khan2021missing,
+  title={Missing data in randomised controlled trials of rheumatoid arthritis drug therapy are substantial and handled inappropriately},
+  author={Khan, Nasim A and Torralba, Karina D and Aslam, Fawad},
+  journal={RMD open},
+  volume={7},
+  number={2},
+  pages={e001708},
+  year={2021},
+  publisher={BMJ Specialist Journals}
+}
+
+@article{goldberg2021data,
+  title={Data missing not at random in mobile health research: Assessment of the problem and a case for sensitivity analyses},
+  author={Goldberg, Simon B and Bolt, Daniel M and Davidson, Richard J},
+  journal={Journal of medical Internet research},
+  volume={23},
+  number={6},
+  pages={e26749},
+  year={2021},
+  publisher={JMIR Publications Toronto, Canada}
+}
