--- a/sn-article.tex
+++ b/sn-article.tex
@@ -616,17 +616,17 @@ However, ensure that the flowchart annotation is your last resort.
 %
 \subsection*{Signalling question - 3.2 }
 %
-The question ``Is there evidence that the result was not biased by missing outcome data?'' assesses the potential bias introduced by missing data in a study.
+The signalling question ``Is there evidence that the result was not biased by missing outcome data?'' evaluates the potential bias introduced by missing data in a study.
 It aims to evaluate whether there is sufficient evidence to conclude that the study's results were not influenced or biased due to missing outcome data.
 When answering this question, researchers evaluate whether the missing outcome data could have influenced the study's results in a biased manner.
 Missing outcome data can occur when participants drop out of a study, fail to provide data for certain outcomes, or when data is not collected as planned.
-The concern is that the missing data may introduce bias if it is related to the treatment being studied or if it differs systematically between the treatment groups.
+The concern is that the missing data may introduce bias if it is related to the treatment being studied or if it differs systematically between the treatment groups~\cite{akl2012potential}.
 To determine if there is evidence that the result was not biased by missing outcome data, researchers typically assess the amount of missing data and whether it is evenly distributed across different study groups.
 If there is a significant amount of missing data, especially if it is related to the outcomes being measured, it may increase the risk of bias.
 Researchers evaluate the strategies employed to handle missing data.
 This may involve techniques such as imputation (replacing missing values with estimated values) or sensitivity analyses to assess the impact of missing data on the results.
 To annotate for this signalling question, the annotators should specifically look for the analysis method that was used to handle or correct for the missing outcomes data.
-This analysis method could be, for example, Multiple Imputation (MI), Inverse Probability Weighting (IPW), Weighted Estimating Equations (WEE), and Pattern Mixture Models (PMM).
+This analysis method could be, for example, Multiple Imputation (MI), Inverse Probability Weighting (IPW), Weighted Estimating Equations (WEE), and Pattern Mixture Models (PMM)~\cite{bell2014handling,khan2021missing}.
 
 
 %
@@ -645,11 +645,13 @@ This analysis method could be, for example, Multiple Imputation (MI), Inverse Pr
 
 For annotation instructions for this signalling question, ``Is there evidence that the result was not biased by missing outcome data?'' follow the Flowchart~\ref{fig:3_2}.
 The first diamond asks the annotators to look for the use of one of these methods: Multiple Imputation (MI), Inverse Probability Weighting (IPW), Weighted Estimating Equations (WEE), and Pattern Mixture Models (PMM).
-If the use of the analysis method is found, go to the next diamond, which instructs the annotator to identify any method that was used to conduct sensitivity analysis.
+If the use of the analysis method is found, go to the next diamond, which instructs the annotator to identify any method that was used to conduct sensitivity analysis~\cite{goldberg2021data}.
 Did the study do some sensitivity analysis that shows that this change is due to missing outcomes data, or did the different analysis methods used have a minor effect on how the intervention affects an outcome?
 Then annotate these sentences containing the analysis method and sensitivity analysis and mark them with ``3.2 Yes Good''.
 By conducting sensitivity analyses, researchers can gain insight into the potential impact of missing data on the study's findings. This information helps to address concerns regarding bias and strengthens the overall validity and reliability of the study results.
 If no sensitivity analysis was done, then mark the sentence containing the method used to handle the missing data and label it as ``3.2 No Bad''.
+The information to answer this signalling question is likely found in the Method section of the RCTs.
+
 %
 %
 %
