SQ 3.3 - references done

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -656,11 +656,12 @@ The information to answer this signalling question is likely found in the Method
 %
 %
 \subsection*{Signalling question - 3.3 }
+\label{subsec:3_3}
 %
 The question ``Could the missingness in the outcome depend on its true value?'' assesses the potential for missing outcome data to be related to the actual values of the outcome variable.
 This question aims to evaluate whether the missingness of data is related to the true values of the outcome being measured in a study.
 By considering this question, you are examining whether there is a possibility that the missingness of outcome data is not random but instead depends on the actual values of the outcome variable.
-If missingness is related to the true values, it can introduce bias and impact the validity of the study's results.
+If missingness is related to the true values, it can introduce bias and impact the validity of the study's results~\cite{bell2014handling,calvert2013reporting}.
 To answer this question, reviewers need to assess whether there is a potential relationship between the missing data and the true value of the outcome.
 This can be done by examining the reasons for missing data and analyzing whether the missing data is related to other participant characteristics or study factors.
 For example, if the study assesses fatigue as the outcome of interest and if participants experience fatigue or drop out of the study due to fatigue, the missingness can potentially be related to missing outcome data in a study.
@@ -693,6 +694,7 @@ This is a theoretical question, the answer to which could be basically obtained 
 %
 %
 \subsection*{Signalling question - 3.4 }
+\label{subsec:3_4}
 %
 XOX
 
@@ -750,6 +752,7 @@ This domain aims to evaluate whether there are potential sources of bias in how 
 %
 %
 \subsection*{Signalling question - 4.1 }
+\label{subsec:4_1}
 %
 %The signalling question 4.1 ``Was the method of outcome measurement inappropriate?'' aims to evaluate whether the methods employed to measure the outcomes of interest in the study were suitable and reliable.
 %This question examines whether the chosen outcome measures were relevant to the research question and whether they were accurately and consistently measured.
@@ -781,6 +784,7 @@ If there is no information about the validity of the measurement tool/method, ma
 %
 %
 \subsection*{Signalling question - 4.2 }
+\label{subsec:4_2}
 %
 The signalling question 4.1 ``Could measurement or ascertainment of the outcome have differed between intervention groups?'' assesses whether outcome measurement methods could have differed between the intervention groups in a study.
 %It aims to evaluate whether there were any systematic differences or biases in how the outcomes were measured or ascertained for the different groups being compared.
@@ -813,6 +817,7 @@ The uniformity in the measurement methods increases the internal validity as wel
 %
 %
 \subsection*{Signalling question - 4.3 }
+\label{subsec:4_3}
 %
 The signalling question 4.3 ``Were outcome assessors aware of the intervention received by the study participants?'' assesses the blinding or masking of outcome assessors in a study.
 If the outcome assessors are unblinded, they may unintentionally or inadvertently favour one one intervention over another based on preconceived notions about the interventions.
@@ -847,6 +852,7 @@ This information if not found from the Methods sections, could also be annotated
 %
 %
 \subsection*{Signalling question - 4.4 }
+\label{subsec:4_4}
 %
 The signalling question 4.4 ``Could assessment of the outcome have been influenced by knowledge of intervention received?'' evaluates the potential for bias resulting from outcome assessors' awareness of the intervention received by the participants.
 This question aims to assess whether outcome assessments ``could'' have been influenced or biased by the assessors' knowledge of the intervention assignment.
@@ -875,6 +881,7 @@ For the domains of physiotherapy and rehabilitation, the question is quite theor
 %
 %
 \subsection*{Signalling question - 4.5 }
+\label{subsec:4_5}
 %
 The signalling question 4.5 ``Is it likely that the assessment of the outcome was influenced by knowledge of the intervention received?'' evaluates the likelihood that the outcome assessment was biased due to assessors' knowledge of the intervention received by the participants.
 The question is similar to the question 4.4, but it directly asks about the likelihood of the assessment being influenced by knowledge of the intervention.
