--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -739,3 +739,14 @@
   year={2021},
   publisher={JMIR Publications Toronto, Canada}
 }
+
+@article{calvert2013reporting,
+  title={Reporting of patient-reported outcomes in randomized trials: the CONSORT PRO extension},
+  author={Calvert, Melanie and Blazeby, Jane and Altman, Douglas G and Revicki, Dennis A and Moher, David and Brundage, Michael D and CONSORT PRO Group, for the and others},
+  journal={Jama},
+  volume={309},
+  number={8},
+  pages={814--822},
+  year={2013},
+  publisher={American Medical Association}
+}
